# quark-lm

./: .gitignore  .readthedocs.yaml  BRANCH_DIVERSITY_RESEARCH.md  DEEP_RESEARCH_REVIEW.md  FORWARD_RESEARCH_PLAN.md  GOAL.md  HISTORY.md  LICENSE  MECHANICS_AUDIT.md  PYTORCH_PARITY_PHASE_AUDIT.md  PYTORCH_PARITY_PHASE_EXIT_CHECKLIST.md  QUALITY.md  RC_CHECKLIST.md  RC_GAP_AUDIT.md  RC_SPEC.md  README.md  RESEARCH_IMPLEMENTATION_MAP.md  STATUS.md  STRUCTURE_AUDIT.md  package-lock.json  package.json  pyproject.toml
corpus/: admissions.jsonl  glossary.json  grammar.json  ledger.json
evals/: admission_paraphrases.jsonl  admissions.jsonl  glossary.jsonl  heldout.jsonl  learning.jsonl  owner.jsonl  paraphrases.jsonl  qa.jsonl  self.jsonl  unknowns.jsonl
scripts/: build-marketing.mjs  check_release_gate.py  expand_grammar.py  profile_torch_training.py
sites/: DEPLOYMENT.md
src/: admission_probe_audits.py  admission_probe_paths.py  admission_probe_records.py  admission_probe_sync.py  admission_probes.py  admit.py  answer_candidates.py  answer_contrast_pairs.py  answer_decoder.py  answer_decoder_artifacts.py  answer_decoder_builder.py  answer_decoder_cli.py  answer_decoder_commands.py  answer_decoder_constants.py  answer_decoder_evaluation.py  answer_decoder_features.py  answer_decoder_model.py  answer_decoder_pool.py  answer_decoder_training.py  answer_examples.py  answer_features.py  answer_model.py  answer_model_builder.py  answer_model_cli.py  answer_model_commands.py  answer_model_constants.py  answer_model_data.py  answer_model_evaluation.py  answer_model_pool.py  answer_model_softmax.py  answer_model_training.py  answer_prompt_templates.py  answer_unknown_augmentation.py  autograd.py  branch_diversity_collapse_response.py  branch_diversity_diagnostics.py  branch_diversity_snapshot_coverage.py  branch_diversity_snapshot_stability.py  branch_diversity_snapshots.py  branch_routing_audit.py  (+495 more)
tests/: test_absolute_rope_parity.py  test_abstention_ledger.py  test_adamw_device_kwargs.py  test_admission_probes.py  test_admit.py  test_answer_all_positions.py  test_answer_candidates.py  test_answer_contrast_pair.py  test_answer_contrast_pairs.py  test_answer_decoder.py  test_answer_model.py  test_answer_torch_stage.py  test_answer_torch_stage_combined_best.py  test_answer_unknown_augmentation.py  test_autograd_finite_difference.py  test_batched_absolute_rope.py  test_best_checkpoint.py  test_best_checkpoint_combined.py  test_branch_diversity_collapse_response.py  test_branch_diversity_snapshot_response.py  test_candidate_quarantine.py  test_closed_world_subword_tokenizer.py  test_closed_world_verifier.py  test_closed_world_verifier_exports.py  test_corpus_growth_plan.py  test_corpus_hygiene.py  test_curriculum.py  test_entity_visibility_guard.py  test_epistemic_abstention.py  test_epistemic_calibration.py  (+264 more)
(+112 files in other folders)
