[project]
name = "quark-lm"
version = "0.1.0"
description = "QuarkLM experimental closed-world language model prototype"
requires-python = ">=3.11"

[project.scripts]
quark-lm-curriculum = "closed_world_lm.curriculum:main"
quark-lm-train = "closed_world_lm.train:main"
quark-lm-evaluate = "closed_world_lm.evaluate:main"
quark-lm-answer = "closed_world_lm.answer_model:main"
quark-lm-decoder = "closed_world_lm.answer_decoder:main"
quark-lm-admit = "closed_world_lm.admit:main"
quark-lm-admission-probes = "closed_world_lm.admission_probes:main"
quark-lm-glossary-probes = "closed_world_lm.glossary_probes:main"
quark-lm-self-improve = "closed_world_lm.self_improve:main"
quark-lm-self-diagnose = "closed_world_lm.self_diagnose:main"
quark-lm-transformer = "closed_world_lm.transformer_char_model:main"
closed-world-curriculum = "closed_world_lm.curriculum:main"
closed-world-train = "closed_world_lm.train:main"
closed-world-evaluate = "closed_world_lm.evaluate:main"
closed-world-answer = "closed_world_lm.answer_model:main"
closed-world-decoder = "closed_world_lm.answer_decoder:main"
closed-world-admit = "closed_world_lm.admit:main"
closed-world-admission-probes = "closed_world_lm.admission_probes:main"
closed-world-glossary-probes = "closed_world_lm.glossary_probes:main"
closed-world-self-improve = "closed_world_lm.self_improve:main"
closed-world-self-diagnose = "closed_world_lm.self_diagnose:main"
closed-world-transformer = "closed_world_lm.transformer_char_model:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
