[project]
name = "quark-lm"
version = "0.1.0"
description = "QuarkLM experimental closed-world language model prototype"
requires-python = ">=3.11"

[project.scripts]
quark-lm-curriculum = "curriculum:main"
quark-lm-train = "train:main"
quark-lm-evaluate = "evaluate:main"
quark-lm-answer = "answer_model:main"
quark-lm-decoder = "answer_decoder:main"
quark-lm-admit = "admit:main"
quark-lm-admission-probes = "admission_probes:main"
quark-lm-glossary-probes = "glossary_probes:main"
quark-lm-self-improve = "self_improve:main"
quark-lm-self-diagnose = "self_diagnose:main"
quark-lm-transformer = "transformer_char_model:main"
closed-world-curriculum = "curriculum:main"
closed-world-train = "train:main"
closed-world-evaluate = "evaluate:main"
closed-world-answer = "answer_model:main"
closed-world-decoder = "answer_decoder:main"
closed-world-admit = "admit:main"
closed-world-admission-probes = "admission_probes:main"
closed-world-glossary-probes = "glossary_probes:main"
closed-world-self-improve = "self_improve:main"
closed-world-self-diagnose = "self_diagnose:main"
closed-world-transformer = "transformer_char_model:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
